# VanDorial

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  VanDorial_2.pcap  VanDorial_5.pcap  VanDorial_6.pcap  deploy.sh  docker-compose.v2.yml  docker-compose.yml  full.pcap  pyproject.toml  requirements.txt  setup.py  trickle.pcap
.github/workflows/: ci.yml
deploy/: .gitattributes  build-debs.sh  build-wheelhouse.sh  enable-https.sh  grafana-gencall.json  harden-disk.sh  install-offline.sh  install-ubuntu.sh  install.sh  smoke-loopback.sh  update.sh
docs/api/: openapi.controller.json  openapi.worker.json
docs/deploy/: loop-runner.md  release-3.0.md
docs/gencall-3.0/: ROADMAP.md  wave-01-findings.md  wave-02-findings.md  wave-03-findings.md
docs/releases/: v2.2.10.md  v2.2.9.md
docs/security/: pentest-report-2.2.2.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
gencall/: Dockerfile  __init__.py  cli.py  main.py
gencall/api/: auth.py  fleet.py  loop_validation.py  loops.py  metrics.py  routes.py  security_headers.py  websocket.py
gencall/controller/: __init__.py  aggregator.py  app.py  models.py  (+3 more)
sigma-re/: .gitignore
tests/: conftest.py  test_alerts.py  test_auth_login.py  test_call_records.py  test_capture.py  test_capture_api.py  test_controller.py  test_db_portability.py  test_fleet_discovery.py  test_gen_loop_csv.py  test_gencall.py  test_input_hardening.py  test_integration.py  test_logging_format.py  test_loop_engine.py  test_loop_inf_cleanup.py  test_loop_matcher.py  test_loop_run_tz.py  test_loop_shaper.py  test_metrics.py  test_packaging.py  test_pentest_2_2_2.py  test_pool_optimizer.py  test_process_registry.py  test_records_export.py  test_retention.py  test_sale_zones.py  test_scenario_security.py  test_schedule.py  test_security_hardening.py  test_security_headers.py  test_sipp_command.py  test_stats_push.py  test_stub_harness.py  test_traffic_calc_api.py  test_traffic_profile.py  test_trust_config.py  test_tz_offsets.py  test_wave1_fixes.py  test_wave2_fixes.py  (+1 more)
(+299 files in other folders)
